[project]
name = "pygitver"
version = "0.2.3"
authors = [
  { name="Yurii Puchkov", email="panpuchkov@gmail.com" },
]
description = "Manages Git Tag versions and generates ChangeLog"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["git tag", "version", "versions", "conventional commit", "semver", "changelog", "changelogs"]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Jinja2==3.1.2"
]
urls = { "Homepage" = "https://github.com/panpuchkov/pygitver" }

[project.scripts]
pygitver = "pygitver.pygitver:main"


[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["*"]
